--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,8 @@ jobs:
       run: dotnet restore
       working-directory: src/Api
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restoree
+      working-directory: src/Api
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normale
+      working-directory: tests
