--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet restore
       working-directory: src/Api
     - name: Build
-      run: dotnet build --no-restoree
+      run: dotnet build --no-restore
       working-directory: src/Api
     - name: Test
       run: dotnet test --no-build --verbosity normale
