--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,5 @@ jobs:
       run: dotnet build --no-restore
       working-directory: src/Api
     - name: Test
-      run: dotnet test --no-build --verbosity normale
+      run: dotnet test --no-build --verbosity normal
       working-directory: tests
