--- a/tests/UnitTests/BasketballStats.UnitTests.csproj
+++ b/tests/UnitTests/BasketballStats.UnitTests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Api\Api.csproj" />
+    <ProjectReference Include="..\..\src\Api\BasketballStats.Api.csproj" />
   </ItemGroup>
 
 </Project>
