Rename domain service to better name and move domain aggregate logic to it avoid leaking functionality to handlers

--- a/src/Api/BasketballStats.Api.csproj
+++ b/src/Api/BasketballStats.Api.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\Infrastructure\BasketballStats.Infrastructure.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="BasketballStats.UnitTests" />
+	</ItemGroup>
+
 </Project>
