--- a/src/Domain/BasketballStats.Domain.csproj
+++ b/src/Domain/BasketballStats.Domain.csproj
@@ -10,7 +10,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="BasketballStats.Api" />
-		<InternalsVisibleTo Include="UnitTests" />
+		<InternalsVisibleTo Include="BasketballStats.UnitTests" />
 	</ItemGroup>
 
 </Project>
