--- a/src/Infrastructure/BasketballStats.Infrastructure.csproj
+++ b/src/Infrastructure/BasketballStats.Infrastructure.csproj
@@ -15,7 +15,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="BasketballStats.Api" />
-		<InternalsVisibleTo Include="UnitTests" />
+		<InternalsVisibleTo Include="BasketballStats.UnitTests" />
 	</ItemGroup>
 
 	<ItemGroup>
